# ai-interview-service

./: .gitignore  PORTING_MANUAL.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  pull_request_template.md  기능-개선-템플릿.md  기능-문서-개선-템플릿.md  기능-추가-템플릿.md  (+2 more)
back_tooktac/: .env.example  README.md  make_dummydata.py  pyproject.toml  requirements1.txt
back_tooktac/alembic/: env.py
back_tooktac/alembic/versions/: 07b67346fb67_baseline_full_schema.py
back_tooktac/app/: config.py  main.py  vito_jwt_token.json
back_tooktac/app/api/: __init__.py  audio.py  interview.py  report.py  result.py  resume.py  signup.py  training_page.py  user.py  video.py
back_tooktac/app/core/: jwt_token_updater.py  security.py
back_tooktac/app/repository/: __init__.py  database.py  interview.py
back_tooktac/app/services/report/: data_parser.py  final_report_processor.py  gemini_advisor.py  interview_data_formatter.py  models.py  report_builder.py  score_aggregator.py
back_tooktac/app/services/resume/: __init__.py  resume_service.py
back_tooktac/app/services/stt/: clovaspeech.py  vitospeech.py
back_tooktac/app/services/text/: answer_generator.py  document_parser.py  evaluator.py  make_question.py
back_tooktac/app/services/user/: background_tasks.py  signup_service.py
back_tooktac/app/utils/: auth_ws.py
back_tooktac/tests/: conftest.py  test_auth_api.py  test_interview_api.py  test_report_api.py  test_report_services.py  test_result_api.py  test_resume_api.py  test_security.py
front_tooktac/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+34 files in other folders)
